# canmos-niti

./: .env.example  .gitignore  DEPLOY.md  FINAL_SUMMARY.md  Makefile  QUICKSTART.md  README.md  REVISION_REPORT.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  railway.json  render.yaml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.ocr  Procfile  README.md  alembic.ini  canmos_dev.db  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements-ocr.txt  requirements.ocr.txt  requirements.txt  test.db
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_migration.py  001_initial_schema.py  002_change_tax_events_valor_to_float.py  20260603_initial_schema.py  20260605_add_conversation_id_and_fontes.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  middleware.py  security.py  utils.py
backend/app/core/config/: settings.py
backend/app/core/database/: session.py
backend/app/core/security/: jwt.py  (+2 more)
backend/docs/: AUTH_API.md  DATABASE_SCHEMA.md  MIGRATIONS.md  USERS_API.md
backend/scripts/: entrypoint.sh  test_auth.py  validate_project.py  verify_schema.py
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_dashboard.py  test_documents.py  test_e2e.py  test_export.py  test_health.py  test_legislation_rag.py  test_ocr.py  test_ocr_classifier.py  test_parsers.py  test_pdf.py  test_rag.py  test_security.py  test_storage.py  test_tax.py  test_tax_engine.py  test_users.py  test_validators.py
backend/tests/integration/: conftest.py  test_api_endpoints.py
(+163 files in other folders)
